deploy/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: wahlergebnisse
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wahlergebnisse
  namespace: wahlergebnisse
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: wahlergebnisse-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - wahlergebnisse.levinkeller.de
      secretName: wahlergebnisse-tls
  rules:
    - host: wahlergebnisse.levinkeller.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wahlergebnisse
                port:
                  number: 80
